--- a/bicycle/bicycle.csproj
+++ b/bicycle/bicycle.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Gear.cs" />
+    <Compile Include="ObscuringReferences.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RevealingReferences.cs" />
     <Compile Include="Wheel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
