--- a/sec3/sec3/sec3.csproj
+++ b/sec3/sec3/sec3.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="3_3.cs" />
     <Compile Include="IWheel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
